Fixed scrollable Track display to not cut off tracks.

--- a/src/components/LyricsSync.css
+++ b/src/components/LyricsSync.css
@@ -1,5 +1,5 @@
 .lyricsWrapper {
-    margin-left: 5rem;
+    margin-left: 0rem;
 }
 
 .lyricsdisplay {
